# dynamic_obstacle_avoidance

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  TODO.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
analysis/: analytical_evaluation.py  gamma_value_display.py  gradient_surface_distance.py  reference_point_search.py
analysis/comparison/: README.md  environment.yml  setup.py
analysis/comparison_navigation/: main.py
dynamic_obstacle_avoidance/: metric_evaluation.py  obstacle_linear_dynamics.py  settings.py  state.py  utils.py
examples/: animation_moving_obstacle.py  animation_muliple_obstacle.py  animation_multiple_agent.py  animation_multiple_obstacle.py  animation_rotating_agent.py  example_3d_avoidance.py  example_multiple_obstacle.py  obstacle_template.py  scenario_one.py  vectorfield_inverse_obstacle.py  vectorfield_multiple_cross.py  vectorfield_multiple_obstacle.py  vectorfield_single_obstacle.py
figures/: .gitignore
notebook/: requirements_notebook.txt  tutorial_obstacle_avoidance.ipynb  tutorial_obstacle_avoidance_copy.ipnb  widget_setup.py
scripts/: animation_deforming_obstacle.py  animation_inflating_obstacle.py  comparison_algorithms.py  comparison_qualitative_crowd.py  conference_room_setup.py  custom_kernel_function.py  data_evaluation_joint_space.py  evaluation_qolo_room.py  example_3d_rotation.py  example_animation.py  example_gradient_descent.py  example_multibody.py  example_multiple_hull.py  example_rotation_modulation.py  example_surgery_setup.py  examples_animation.py  examples_avoidance_3d.py  examples_boundary_field.py  examples_multiple_obstacles.py  examples_nonsmooth_surface.py  examples_sensory_data.py  examples_trees_vectorsFields.py  examples_vector_field.py  extract_rosbag2json.py  figures_extension_hull.py  gamma_visualization.py  gradien_descent_test.py  metric_data_evaulation.py  nonlinear_ds.py  obstacle_avoidance_local_rotation.py  pandemic_main.py  plots_nonlinear.py  radial_kernel_function.py  script_moving_corridor.py  sequence_reference_point.py  simulation_crowd.py  simulation_lasa_room.py  surgery_setup.py  test_animation.py  test_ellipse_obstacle.py  (+26 more)
src/comparison/: README.md  (+2 more)
tests/: archive_test_automated_reference_point.py  rotational_avoider.py  test_and_visualization_nonlinear_displacement.py  test_automated_reference_point.py  test_boundary_overrotation.py  test_cuboid_xd.py  test_draw_obstacles.py  test_dynamic_modulation.py  test_dynamic_obstacle_avoidance.py  test_ellipse_obstacle.py  test_ellipse_xd.py  test_flat_plane.py  test_flower_obstacle.py  test_hull_storer.py  test_inverted_obstacle.py  test_local_radius.py  test_modulation_3d.py  test_multidimensional_obstacle.py  test_multiple_obstacles.py  test_multiwall_reference_point.py  test_normal_direction.py  test_obstacle_container.py  test_overrotation_and_graph.py  test_polygon.py  test_polygon_gamma_value.py  test_repulsion.py  test_rotation_avoidance.py  test_rotation_container.py  test_rotation_weight.py  test_shapely_ellipse_obstacle.py
(+332 files in other folders)
