[metadata]
name = dynamic_obstacle_avoidance
description = Algorithm to Dynamically Avoid Obstacles
author = Lukas Huber
license = BSD
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    dynamic_obstacle_avoidance
install_requires =
    matplotlib
    numpy
    scipy
    shapely
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

# [options.extras_require]
# testing =
    # pytest>=6.0
    # pytest-cov>=2.0
    # mypy>=0.910
    # flake8>=3.9
    # tox>=3.24

# [options.package_data]
# dynamic_obstacle_avoidance = py.typed

# [flake8]
# max-line-length = 160

